RESOLVED FIXED306063
Fix WebKit.NoResumeSoundPlayedToTheEndAfterThePageBecomesVisible on iOS
https://bugs.webkit.org/show_bug.cgi?id=306063
Summary Fix WebKit.NoResumeSoundPlayedToTheEndAfterThePageBecomesVisible on iOS
ccarley2
Reported 2026-01-22 14:15:36 PST
WebKit.NoResumeSoundPlayedToTheEndAfterThePageBecomesVisible has been a constant failure and was disabled in august 2024.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-22 14:15:43 PST
ccarley2
Comment 2 2026-01-22 14:19:58 PST
EWS
Comment 3 2026-01-27 16:02:58 PST
Committed 306313@main (c9e8120c5f0a): <https://commits.webkit.org/306313@main> Reviewed commits have been landed. Closing PR #57076 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.