Fix WebKit.NoResumeSoundPlayedToTheEndAfterThePageBecomesVisible on iOS https://bugs.webkit.org/show_bug.cgi?id=306063 rdar://168705920

Reviewed by Brent Fulgham.

The test was incorrectly hiding the window on iOS. It was waiting for the
'visibilitychange' event, but that is not fired on iOS when using the
setHidden function. Instead, we resign key window and wait for the activity
state update to complete.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/NoResumeSoundPlayedToTheEndAfterThePageBecomesVisible.mm:
(TEST(WebKit, NoResumeSoundPlayedToTheEndAfterThePageBecomesVisible)):
* Tools/TestWebKitAPI/cocoa/TestWKWebView.h:
* Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[TestWKWebView setVisibility:]):

Canonical link: https://commits.webkit.org/306313@main